[Layout] Styles form and header on landing page

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -7,9 +7,51 @@
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
-          <h1 class="cover-heading">Where are you headed?</h1>
+          <h1 class="cover-heading">Find Your Next Neighborhood</h1>
+          <button type="button">How It Works</button>
           <div class="landingSearchForm">
-            <searchForm></searchForm>
+            <div class="searchForm col-sm-12 col-md-12">
+              <div class="col-sm-12 col-md-offset-3 col-md-8">
+                <form>
+                  <div class="form-group col-sm-6 col-md-4 landing-form">
+                    <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-4 col-md-1 landing-form">
+                      <select class="form-control" id="rentBuy" name="rentBuy" ng-model="main.searchInfo.buyOrRent">
+                        <option value="rent">Rent</option>
+                        <option value="buy">Buy</option>
+                      </select>
+                    </div>
+                    <div class="col-sm-4 col-md-2 landing-form">
+                      <select class="form-control" name="bathrooms" ng-model="bathroomSelected">
+                        <option value="1">1 bedroom</option>
+                        <option value="2">2 bedrooms</option>
+                        <option value="3">3 bedrooms</option>
+                        <option value="4">4 bedrooms</option>
+                        <option value="5">5 bedrooms</option>
+                        <option value="6">6 bedrooms</option>
+                        <option value="7">7+ bedrooms</option>
+                      </select>
+                    </div>
+                    <div class="col-sm-4 col-md-2 landing-form">
+                      <select class="form-control" ng-model="main.searchInfo.bedrooms">
+                        <option value="1" selected>1 bathrooms</option>
+                        <option value="2">2 bathroom</option>
+                        <option value="3">3 bathrooms</option>
+                        <option value="4">4 bathrooms</option>
+                        <option value="5">5 bathrooms</option>
+                        <option value="6">6 bathrooms</option>
+                        <option value="7">7+ bathrooms</option>
+                      </select>
+                    </div>
+                    <div class="col-sm-2 col-md-1 landing-form" style="margin-left:10px">
+                      <button type="button" ng-click="main.submitAddress()" class="btn btn-default">Submit</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -54,51 +96,50 @@
 
   <div class="our-team">
     <div class="container-fluid">
-      <h1 class="our-team-title">Our Team</h1>
+      <h1>Our Team</h1>
       <div class="our-team-links">
         <div class="col-md-6">
-          <h3>
-            <a href="https://github.com/KalisaFalzone">Evan Mencke</a>
-            <a class="icon-link" href="https://www.linkedin.com/in/metaevan">
-              <i class="fi-social-linkedin"></i>
-            </a>
-            <a class="icon-link" href="https://github.com/MetaEvan">
-              <i class="fi-social-github"></i>
-            </a>
-          </h3>
-          <h3>
-            <a href="https://github.com/KalisaFalzone">Raghav Abboy</a>
-            <a class="icon-link" href="https://www.linkedin.com/in/raghavabboy">
-              <i class="fi-social-linkedin"></i>
-            </a>
-            <a class="icon-link" href="https://github.com/RaghavAbboy">
-              <i class="fi-social-github"></i>
-            </a>
-          </h3>
-
-        </div>
-        <div class="col-md-6">
-          <h3>
-            <a href="https://github.com/KalisaFalzone">Melinda Bernardo</a>
-            <a class="icon-link" href="https://www.linkedin.com/in/melindasarnicki">
-              <i class="fi-social-linkedin"></i>
-            </a>
-            <a class="icon-link" href="https://github.com/msarnicki">
-              <i class="fi-social-github"></i>
-            </a>
-          </h3>
-          <h3>
-            <a href="https://github.com/KalisaFalzone">Kalisa Falzone</a>
-            <a class="icon-link" href="https://www.linkedin.com/in/kalisafalzone">
-              <i class="fi-social-linkedin"></i>
-            </a>
-            <a class="icon-link" href="https://github.com/KalisaFalzone">
-              <i class="fi-social-github"></i>
-            </a>
-          </h3>
+          <ul>
+            <li>
+              <span>Evan Mencke</span>
+              <a class="icon-link" href="https://www.linkedin.com/in/metaevan">
+                <i class="fi-social-linkedin"></i>
+              </a>
+              <a class="icon-link" href="https://github.com/MetaEvan">
+                <i class="fi-social-github"></i>
+              </a>
+            </li>
+            <li>
+              <span>Raghav Abboy</span>
+              <a class="icon-link" href="https://www.linkedin.com/in/raghavabboy">
+                <i class="fi-social-linkedin"></i>
+              </a>
+              <a class="icon-link" href="https://github.com/RaghavAbboy">
+                <i class="fi-social-github"></i>
+              </a>
+            </li>
+          </div>
+          <div class="col-md-6">
+            <li>
+              <span>Melinda Bernardo</span>
+              <a class="icon-link" href="https://www.linkedin.com/in/melindasarnicki">
+                <i class="fi-social-linkedin"></i>
+              </a>
+              <a class="icon-link" href="https://github.com/msarnicki">
+                <i class="fi-social-github"></i>
+              </a>
+            </li>
+            <li>
+              <span>Kalisa Falzone</span>
+              <a class="icon-link" href="https://www.linkedin.com/in/kalisafalzone">
+                <i class="fi-social-linkedin"></i>
+              </a>
+              <a class="icon-link" href="https://github.com/KalisaFalzone">
+                <i class="fi-social-github"></i>
+              </a>
+            </li>
         </div>
       </div>
     </div>
   </div>
-
 </div>
