--- a/client/index.html
+++ b/client/index.html
@@ -30,9 +30,10 @@
 
   <div ui-view></div>
 
-  <footer class="footer">
+<!-- start footer section -->
+<!--   <footer class="footer">
     <div class="container">
-      <div> <!-- start footer section -->
+      <div> 
         <ul>
           <li>&copy; Move-in Assistant</li>
           <li>Raghav Abboy,</li>
@@ -40,9 +41,11 @@
           <li>Evan Mencke,</li>
           <li>and Kalisa Falzone</li>
         </ul>
-      </div> <!-- end footer section -->
+      </div>
     </div>
-  </footer>
+  </footer> -->
+
+ <!-- end footer section -->
 
     <!-- Google Maps -->
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
