[Fix] Adds title and routing for graph

--- a/client/app/charts/chartsTemplate.html
+++ b/client/app/charts/chartsTemplate.html
@@ -1,4 +1,5 @@
 <div>
+  <h1>Charts</h1>
   <!-- style="min-width: 400px; height: 400px; margin: 0 auto" -->
   <div id="percentage-chart"></div>
   <span id="pie-chart"></span>
