--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -44,7 +44,7 @@
       </div>
       <div class="col-md-4">
         <div class="nav-button">
-          <a ui-sref="main.details.statistics">Statistics</a>
+          <a ui-sref="main.details.charts">Statistics</a>
         </div>
       </div>
     </div>
