--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -21,7 +21,7 @@
       </div>
       <div class="col-xs-6 col-sm-6 col-md-6 commute">
         <div class="card-block">
-          <h5 class="card-title">Commute Time</h5>
+          <h5 class="card-title">Commute</h5>
           <p class="card-text">{{currentNeighborhood.commuteDistance}} miles | {{currentNeighborhood.commuteTime}} minutes</p>
         </div>
       </div>
@@ -68,6 +68,5 @@
       <hr>
       <div ui-view="detail-section"></div>
     </div>
-  </div>
   <div ui-view="detail-section"></div>
 </div>
