[Save] Adds usernames, fixes arrows, miscellaneous bug fixes.

--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -2,14 +2,18 @@
   <!-- slideshow -->
   <div class="slideshow" >
    <!-- neighborhood header -->
-    <span>{{details.currentNeighborhood.name}}</span>
-    <slick dots=false infinite=false speed=300 slides-to-show=4 touch-move=false slides-to-scroll=4 arrows=false>
-      <div ng-repeat="pic in picturesArr">
-        <img ng-src="{{pic.url}}"/>
-        <span>{{pic.username}}</span>
+    <span class="neighborhood-name">{{details.currentNeighborhood.name}}</span>
+    <slick dots=false infinite=true speed=300 autoplaySpeed=3000 pauseOnHover=true swipe=true variableWidth=true slides-to-show=4 autoplay=true touch-move=true slides-to-scroll=4 arrows=true>
+      <div ng-repeat="pic in details.picturesArr">
+        <div class="picture-container">
+          <img ng-src="{{pic[0]}}"/>
+          <!-- <span class="instagram-username">{{pic[1]}}</span> -->   <!-- uncomment to display user name -->
+        </div>
       </div>
     </slick>
   </div>
+
+<pre>{{main.searchInfo}}</pre>
 
   <!-- neighborhood description -->
   <div class="col-md-12 rent-commute-container">
