--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -21,7 +21,7 @@
       <div class="col-xs-6 col-sm-6 col-md-6">
         <div class="card-block">
           <h5 class="card-title">Rent Estimates</h5>
-          <p class="card-text">{{details.currentNeighborhood.estimateLow}}{{details.currentNeighborhood.estimateHigh}}</p>
+          <p class="card-text">{{main.priceRange}}</p>
         </div>
       </div>
       <div class="col-xs-6 col-sm-6 col-md-6 commute">
