--- a/client/app/thumbnails/thumbnailsTemplate.html
+++ b/client/app/thumbnails/thumbnailsTemplate.html
@@ -8,7 +8,7 @@
           <h3 class="card-title">{{neighborhood.name}}</h3>
           <div class="card-block">
             <h4 class="card-title">Rent Averages</h4>
-            <p class="card-text">{{neighborhood.estimateLow}}{{neighborhood.estimateHigh}}</p>
+            <p class="card-text">{{neighborhood.priceString}}</p>
           </div>
           <div class="card-block">
             <h4 class="card-title">Commute Time</h4>
