[Fix] Fixes details page routing for statistics section

--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -54,9 +54,10 @@
     </div>
   </div>
 
+  <div ui-view="detail-section"></div>
 
   <!-- amenities and attractions -->
-    <div class="col-md-12">
+<!--     <div class="col-md-12">
       <hr>
       <div class="row">
         <div class="col-xs-12 col-sm-2">
@@ -70,6 +71,5 @@
         </div>
       </div>
       <hr>
-      <div ui-view="detail-section"></div>
-    </div>
+    </div> -->
 </div>
