--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -57,20 +57,9 @@
 
   <div ui-view="detail-section"></div>
 
-  <!-- amenities and attractions -->
-<!--     <div class="col-md-12">
+  <!-- details -->
+    <div class="col-md-12">
       <hr>
-      <div class="row">
-        <div class="col-xs-12 col-sm-2">
-          <label class="">Amenities and Attractions</label>
-        </div>
-        <div class="col-xs-12 col-sm-10">
-          <div class="row" ng-repeat="place in details.currentNeighborhood.places">
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span ng-click="displayMarkers(place)">{{place[0]}}</span>
-          </div>
-        </div>
-      </div>
-      <hr>
-    </div> -->
+      <div ui-view="detail-section"></div>
+    </div>
 </div>
