--- a/client/app/localSpots/localSpotsTemplate.html
+++ b/client/app/localSpots/localSpotsTemplate.html
@@ -6,45 +6,18 @@
     <div class="col-xs-12 col-sm-2 col-md-12">
        <h3>Local Spots</h3>
     </div>
-    <div class="col-xs-12 col-sm-10">
-      <div class="row" ng-controller="detailsController">
-          <div class="col-xs-6 col-sm-4">
+    <div class="col-md-12">
+      <hr>
+      <div class="row">
+        <div class="col-xs-12 col-sm-2">
+          <label class="">Amenities and Attractions</label>
+        </div>
+        <div class="col-xs-12 col-sm-10">
+          <div class="row" ng-repeat="place in details.currentNeighborhood.places">
             <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Hospitals</span>
+            <span ng-click="details.displayMarkers(place)">{{place[0]}}</span>
           </div>
-          <div class="col-xs-6 col-sm-4">
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Grocery Stores</span>
-          </div>
-          <div class="col-xs-6 col-sm-4" >
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Hair Salons</span>
-          </div>
-          <div class="col-xs-6 col-sm-4 checkbox" >
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Parks</span>
-          </div>
-          <div class="col-xs-6 col-sm-4" >
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Library</span>
-          </div>
-        <div class="col-xs-6 col-sm-4 mt-20"><a href="#" ng-click="expandCollapse()">{{moreLess}}</a></div>
-          <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Hidden</span>
-          </div>
-          <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Hidden</span>
-          </div>
-          <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Hidden</span>
-          </div>
-          <div class="col-xs-6 col-sm-4"   <div collapse="isCollapsed">>
-            <img class="icon" src="assets/images/gas-icon.png" alt="amenity icon">
-            <span>Hidden</span>
-          </div>
+        </div>
       </div>
     </div>
   </div>
