--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -7,8 +7,8 @@
     <div class="col-md-6">
       <!--start of order-by section -->
       <div class="col-md-8 col-md-offset-4">
+        <label>Order Results By:</label>
         <select name="selectOrder" ng-model="main.filterType">
-          <option disabled>Order Results By:</option>
           <option value="estimateLow">Lowest Rent</option>
           <option value="commuteTime">Shortest Commute</option>
           <option value="commuteDistance">Closest Distance</option>
@@ -30,6 +30,7 @@
     <div class="form-group">
       <div class="row">
         <div class="col-sm-10 col-md-5">
+        <label>Max Commute Time:</label>
           <select class="form-control" name="commuteTime" ng-model="main.searchInfo.commuteTime">
             <option value="15">15 min</option>
             <option value="30">30 min</option>
@@ -37,6 +38,7 @@
           </select>
         </div>
         <div class="col-sm-10 col-md-5">
+        <label>Max Commute Distance:</label>
           <select class="form-control" name="commuteDistance" ng-model="main.searchInfo.commuteDistance">
             <option value="5">5 miles</option>
             <option value="10">10 miles</option>
