--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,8 @@
     <img src="assets/images/turf.png">
   </div> -->
   <div style="margin:30px">
-    <a ui-sref="main.results">Main results</a>
-    <a ui-sref="main.details">Main details</a>
+    <a ui-sref="main.results" style="color:purple">Main results</a>
+    <a ui-sref="main.details" style="color:purple">Main details</a>
   </div>
 
   <div ui-view></div>
