--- a/client/app/searchForm/searchFormTemplate.html
+++ b/client/app/searchForm/searchFormTemplate.html
@@ -1,7 +1,7 @@
 <div class="searchForm">
-  <form>
+  <form name="landingSearchForm" ng-submit="main.submitAddress()">
     <div class="form-group">
-      <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
+      <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address" required>
     </div>
     <!-- removed ng-click="main.setValueBuy() from ng-click on div for radio buttons since ng-model can be applied to select -->
     <div class="form-group">
@@ -35,7 +35,7 @@
           </select>
         </div>
         <div class="col-sm-10 col-md-2">
-          <button type="button" ng-click="main.submitAddress()" class="btn btn-default">Submit</button>
+          <button type="button" class="btn btn-default" ng-disabled="landingSearchForm.$invalid" disabled>Submit</button>
         </div>
       </div>
     </div>
