--- a/client/app/searchForm/searchFormTemplate.html
+++ b/client/app/searchForm/searchFormTemplate.html
@@ -3,7 +3,6 @@
     <div class="form-group">
       <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address" required>
     </div>
-    <!-- removed ng-click="main.setValueBuy() from ng-click on div for radio buttons since ng-model can be applied to select -->
     <div class="form-group">
       <div class="row">
         <div class="col-sm-10 col-md-2">
@@ -35,7 +34,7 @@
           </select>
         </div>
         <div class="col-sm-10 col-md-2">
-          <button type="button" class="btn btn-default" ng-disabled="landingSearchForm.$invalid" disabled>Submit</button>
+           <button type="button" class="btn btn=default landing-btn landing-submit" ng-class="{'disabled': main.searchInfo.address.length < 5,'btn-disabled': main.searchInfo.address.length < 5}">Submit</button>
         </div>
       </div>
     </div>
