--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -1,13 +1,13 @@
 <div class="filterForm" ng-init="isCollapsed=true">
   <div class="row">
     <div class="col-md-6">
-      <button type="button" class="btn btn-default" ng-click="isCollapsed = !isCollapsed">Filter Options</button>
+      <button type="button" class="btn btn-default filter-options-btn" ng-click="isCollapsed = !isCollapsed">Filter Options</button>
     </div>
 
     <div class="col-md-6">
       <!--start of order-by section -->
-      <div class="col-md-5 orderBy">
-        <label>Order Results By:</label>
+      <div class="col-md-4 orderBy">
+        <label>Order By:</label>
       </div>
       <div class="col-md-7">
         <select class="form-control" name="selectOrder" ng-model="main.filterType">
@@ -20,42 +20,44 @@
     <!--end of order-by section -->
   </div>
 
-  <form collapse="isCollapsed">
-<!-- start of rent section -->
-    <div class="form-group">
-      <label>Max Monthly Price: ${{main.searchInfo.maxRent}}</label>
-      <input type="range" name="rentRange" min="0" max="8000" value="1000" step="25" ng-model="main.searchInfo.maxRent">
-    </div>
-<!-- end of rent section -->
+  <div>
+    <form collapse="isCollapsed">
+  <!-- start of rent section -->
+      <div class="form-group">
+        <label>Max Monthly Price: ${{main.searchInfo.maxRent}}</label>
+        <input type="range" name="rentRange" min="0" max="8000" value="1000" step="25" ng-model="main.searchInfo.maxRent">
+      </div>
+  <!-- end of rent section -->
 
-  <!-- start of time/distance section -->
-    <div class="form-group">
-      <div class="row">
-        <div class="col-sm-10 col-md-5">
-        <label>Max Commute Time:</label>
-          <select class="form-control" name="commuteTime" ng-model="main.searchInfo.commuteTime">
-            <option value="15">15 min</option>
-            <option value="30">30 min</option>
-            <option value="45">45 min</option>
-          </select>
-        </div>
-        <div class="col-sm-10 col-md-5">
-        <label>Max Commute Distance:</label>
-          <select class="form-control" name="commuteDistance" ng-model="main.searchInfo.commuteDistance">
-            <option value="5">5 miles</option>
-            <option value="10">10 miles</option>
-            <option value="15">15 miles</option>
-            <option value="20">20 miles</option>
-            <option value="25">25 miles</option>
-            <option value="30">30 miles</option>
-          </select>
-        </div>
-  <!-- end of time/distance section -->
-        <div class="col-sm-10 col-md-2">
-          <button type="button" ng-click="main.filterNeighborhoods()" class="btn btn-default">Filter</button>
+    <!-- start of time/distance section -->
+      <div class="form-group">
+        <div class="row">
+          <div class="col-sm-10 col-md-5">
+          <label>Max Commute Time:</label>
+            <select class="form-control" name="commuteTime" ng-model="main.searchInfo.commuteTime">
+              <option value="15">15 min</option>
+              <option value="30">30 min</option>
+              <option value="45">45 min</option>
+            </select>
+          </div>
+          <div class="col-sm-10 col-md-5">
+          <label>Max Commute Distance:</label>
+            <select class="form-control" name="commuteDistance" ng-model="main.searchInfo.commuteDistance">
+              <option value="5">5 miles</option>
+              <option value="10">10 miles</option>
+              <option value="15">15 miles</option>
+              <option value="20">20 miles</option>
+              <option value="25">25 miles</option>
+              <option value="30">30 miles</option>
+            </select>
+          </div>
+      <!-- end of time/distance section -->
+          <div class="col-sm-10 col-md-2">
+            <button type="button" ng-click="main.filterNeighborhoods()" class="btn btn-default filter-btn">Filter</button>
+          </div>
         </div>
       </div>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
 
