[Style] Adds logo to upper left hand corner of app

--- a/client/index.html
+++ b/client/index.html
@@ -16,16 +16,16 @@
 
   <body ng-controller="MainController as main" id="Turf">
 
-<!--   <div class="header">
-    <img src="assets/images/turf.png">
-  </div> -->
-  <div style="margin:30px">
-    <a ui-sref="main.results">Main results</a>
-    <a ui-sref="main.details">Main details</a>
+  <div class="header">
+    <img src="assets/images/turf-logo-small.png">
+  </div>
+<!--   <div style="margin:30px">
+    <a ui-sref="main.results" style="color:orange">Main results</a>
+    <a ui-sref="main.details" style="color:orange">Main details</a>
   </div>
 
-  <div ui-view></div>
-
+  <div ui-view></div> -->
+  <div class="ui-view"></div>
 
 <!-- start footer section -->
   <footer class="footer">
@@ -63,7 +63,6 @@
     <!-- Google Maps -->
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="https://google-maps-utility-library-v3.googlecode.com/svn-history/r391/trunk/markerwithlabel/src/markerwithlabel.js"></script>
-
 
     <!-- Source JS files -->
     <script src="lib/jquery/dist/jquery.js"></script>
