[Feature] Adds ability to search for home purchase prices"

--- a/client/app/thumbnails/thumbnailsTemplate.html
+++ b/client/app/thumbnails/thumbnailsTemplate.html
@@ -7,8 +7,8 @@
           <img class="card-img-top" src="assets/images/santamonicasmall.jpg" alt="picture of neighborhood">
           <h3 class="card-title">{{neighborhood.name}}</h3>
           <div class="card-block">
-            <h4 class="card-title">Rent Averages</h4>
-            <p class="card-text">{{neighborhood.priceString}}</p>
+            <h4 class="card-title">{{neighborhood.priceString.title}}</h4>
+            <p class="card-text">{{neighborhood.priceString.price}}</p>
           </div>
           <div class="card-block">
             <h4 class="card-title">Commute Time</h4>
