--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -21,8 +21,8 @@
     <div class="row">
       <div class="col-xs-6 col-sm-6 col-md-6">
         <div class="card-block">
-          <h5 class="card-title">Rent Estimates</h5>
-          <p class="card-text">{{main.priceRange}}</p>
+          <h5 class="card-title">{{main.priceRange.title}}</h5>
+          <p class="card-text">{{main.priceRange.price}}</p>
         </div>
       </div>
       <div class="col-xs-6 col-sm-6 col-md-6 commute">
