--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -28,7 +28,7 @@ console.log(screen.height);
                       </select>
                     </div>
                     <div class="col-sm-4 col-md-2 landing-form">
-                      <select class="form-control" name="bedrooms" ng-model="main.searchInfo.bathrooms">
+                      <select class="form-control" name="bedrooms" ng-model="main.searchInfo.bedrooms">
                         <option value="1">1 bedroom</option>
                         <option value="2">2 bedrooms</option>
                         <option value="3">3 bedrooms</option>
@@ -39,7 +39,7 @@ console.log(screen.height);
                       </select>
                     </div>
                     <div class="col-sm-4 col-md-2 landing-form">
-                      <select class="form-control" ng-model="main.searchInfo.bedrooms">
+                      <select class="form-control" ng-model="main.searchInfo.bathrooms">
                         <option value="1" selected>1 bathroom</option>
                         <option value="2">2 bathroom</option>
                         <option value="3">3 bathrooms</option>
