[Feat] Highlights category user clicks on and fixes small layout bugs

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,6 @@
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/index.css" rel="stylesheet">
     <link href="assets/css/landing.css" rel="stylesheet">
-    <!-- <link href="assets/css/app.css" rel="stylesheet"> -->
     <link href="lib/slick-carousel/slick/slick.css" rel="stylesheet" >
     <link href="lib/slick-carousel/slick/slick-theme.css" rel="stylesheet">
   </head>
@@ -19,12 +18,7 @@
   <div class="header">
     <img src="assets/images/turf-logo-small.png">
   </div>
-<!--   <div style="margin:30px">
-    <a ui-sref="main.results" style="color:orange">Main results</a>
-    <a ui-sref="main.details" style="color:orange">Main details</a>
-  </div>
-
-  <div ui-view></div> -->
+  
   <div class="ui-view"></div>
 
 <!-- start footer section -->
@@ -58,7 +52,7 @@
     </div>
   </footer>
 
- <!-- end footer section -->
+ <!-- end footer section
 
     <!-- Google Maps -->
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
