--- a/client/app/attractions/attractionsTemplate.html
+++ b/client/app/attractions/attractionsTemplate.html
@@ -1,16 +1,10 @@
 <!-- Attractions -->
 <div class="col-md-12 attractions-container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="row">
-        <div class="col-xs-12 col-sm-10">
-        attractions content here:
-          <div class="row" ng-repeat="place in details.currentNeighborhood.attractions">
-            <img class="icon" src="assets/images/museum-icon.png" alt="attraction icon">
-            <span ng-click="details.displayMarkers(place)">{{place[0].type}}</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <ul ng-repeat="attraction in details.currentNeighborhood.attractions">
+    <li ng-click="details.displayMarkers(attraction); details.selectCategory($index, 'attractionCategory')" ng-class="{activeCategory: $index === details.selectedAttractionCategory}">
+      <img class="icon" src="{{attraction[0].icon}}" alt="attraction category icon">
+      <span>{{attraction[0].type}}</span>
+    </li>
+  </ul>
 </div>
+
