--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="nav-button">
-          <a ui-sref="main.details.localSpots">Local Spots</a>
+          <a ui-sref="main.details.services">Services</a>
         </div>
       </div>
       <div class="col-md-4">
