[Fix] standardizes footerand footer colors

--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
     <!-- // <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <link rel="stylesheet" href="../assets/scss/foundation-icons.css">
 
     <!--Highcharts -->
     <script src="http://code.highcharts.com/highcharts.js"></script>
