[Feature] Enables ordering feature for homebuyers

--- a/client/app/filter/filterTemplate.html
+++ b/client/app/filter/filterTemplate.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-7">
         <select class="form-control" name="selectOrder" ng-model="main.filterType">
-          <option value="estimateLow">Lowest Rent</option>
+          <option value="orderPrice">Least Expensive</option>
           <option value="commuteTime">Shortest Commute</option>
           <option value="commuteDistance">Closest Distance</option>
         </select>
