--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -2,99 +2,87 @@
 <link rel="stylesheet" href="../assets/scss/foundation-icons.css">
 
 <div class="landing-container">
-
-  <script>
-console.log(screen.height);
-  </script>
-
   <div class="landing-photo">
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
           <h1 class="cover-heading">Find Your Next Neighborhood</h1>
           <button class="landing-btn" type="button">How It Works</button>
-          <div class="landingSearchForm">
-            <div class="searchForm col-sm-12 col-md-10">
-              <!-- <div class="col-sm-12 col-md-12"> -->
-                <form class="landingSearchForm">
-                  <div class="form-group col-md-offset-2">  
-                  <div class="col-sm-6 col-md-4 landing-form">
-                    <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
-                  </div>
-                    <div class="col-sm-4 col-md-1 landing-form">
-                      <select class="form-control" id="rentBuy" name="rentBuy" ng-model="main.searchInfo.buyOrRent">
-                        <option value="rent">Rent</option>
-                        <option value="buy">Buy</option>
-                      </select>
-                    </div>
-                    <div class="col-sm-4 col-md-2 landing-form">
-                      <select class="form-control" name="bedrooms" ng-model="main.searchInfo.bedrooms">
-                        <option value="1">1 bedroom</option>
-                        <option value="2">2 bedrooms</option>
-                        <option value="3">3 bedrooms</option>
-                        <option value="4">4 bedrooms</option>
-                        <option value="5">5 bedrooms</option>
-                        <option value="6">6 bedrooms</option>
-                        <option value="7">7+ bedrooms</option>
-                      </select>
-                    </div>
-                    <div class="col-sm-4 col-md-2 landing-form">
-                      <select class="form-control" ng-model="main.searchInfo.bathrooms">
-                        <option value="1" selected>1 bathroom</option>
-                        <option value="2">2 bathroom</option>
-                        <option value="3">3 bathrooms</option>
-                        <option value="4">4 bathrooms</option>
-                        <option value="5">5 bathrooms</option>
-                        <option value="6">6 bathrooms</option>
-                        <option value="7">7+ bathrooms</option>
-                      </select>
-                    </div>
-                    <div class="col-sm-2 col-md-1 landing-form">
-                      <button type="button" class="landing-btn landing-submit" ng-class="{'disabled': main.searchInfo.address.length < 5,'btn-disabled': main.searchInfo.address.length < 5}">Submit</button>
-                    </div>
-                  </div>
-                </form>
-              <!-- </div> -->
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="how-to-use">
-    <div class="container-fluid">
-      <div class="how-to-use-title">
-        <h1>How to use Turf</h1>
-        <h4> Turf is a web application to help you find your best next neighborhood. Let us help you explore your new surroundings. Here are just some of the features:</h4>
+
+  <div class="searchForm col-sm-12 col-md-12">
+    <form class="landingSearchForm col-md-8 col-md-offset-2">
+      <div class="col-sm-4 col-md-6 landing-form">
+        <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
       </div>
-        <div class="col-md-4">
-          <img src="../../assets/images/santamonica.jpg" alt="Map demo" height="600">
-          <div>
-            <h3>Map</h3>
-            <div>
-              <h6>The Map shows the location you searched and will display the general neighborhood highlighted by a circle when you click on the name of the neighborhood. This will allow you to see where the neighborhood is relative to where you are headed.</h6>
-            </div>
-          </div>
+        <div class="col-sm-4 col-md-1 landing-form">
+          <select class="form-control" id="rentBuy" name="rentBuy" ng-model="main.searchInfo.buyOrRent">
+            <option value="rent">Rent</option>
+            <option value="buy">Buy</option>
+          </select>
         </div>
-        <div class="col-md-4">
-          <img src="../../assets/images/santamonica.jpg" alt="Map demo" height="600">
-          <div>
-            <h3>Order and Filter</h3>
-            <div>
-              <h6>Once you have a list of close by neighborhoods you can filter them based on rent prices, distance, and commute time. You are also able to order the search results based on these qualities.</h6>
-            </div>
-          </div>
+        <div class="col-sm-4 col-md-2 landing-form">
+          <select class="form-control" name="bedrooms" ng-model="main.searchInfo.bedrooms">
+            <option value="1">1 bedroom</option>
+            <option value="2">2 bedrooms</option>
+            <option value="3">3 bedrooms</option>
+            <option value="4">4 bedrooms</option>
+            <option value="5">5 bedrooms</option>
+            <option value="6">6 bedrooms</option>
+            <option value="7">7+ bedrooms</option>
+          </select>
         </div>
-        <div class="col-md-4">
-          <img src="../../assets/images/santamonica.jpg" alt="Map demo" height="600">
-          <div>
-            <h3>Neighborhood Glance</h3>
-            <div>
-              <h6>When you click on a neighborhood you are then able to look at close by attactions and amenities such as parks and libraries, museums, schools and shopping. </h6>
-            </div>
-          </div>
+        <div class="col-sm-4 col-md-2 landing-form">
+          <select class="form-control" ng-model="main.searchInfo.bathrooms">
+            <option value="1" selected>1 bathroom</option>
+            <option value="2">2 bathroom</option>
+            <option value="3">3 bathrooms</option>
+            <option value="4">4 bathrooms</option>
+            <option value="5">5 bathrooms</option>
+            <option value="6">6 bathrooms</option>
+            <option value="7">7+ bathrooms</option>
+          </select>
         </div>
-    </div>
+        <div class="col-sm-2 col-md-1 landing-form">
+          <button type="button" class="landing-btn landing-submit">Submit</button>
+        </div>
+      </div>
+    </form>
   </div>
+
+  <div class="feature-section">
+    <div class="col-md-12 feature-header-section">
+      <h1>Meet Your Next Neighborhood - From Your Browser.</h1>
+    </div>
+
+    <div class="row featurette featurette1">
+      <div class="col-sm-10 col-md-7">
+        <h2 class="featurette-heading">Search Any City or Locality.<span class="text-muted"> Worldwide.</span></h2>
+        <p class="lead">Customizable search features that allow you to search, order, and filter results to find the best nieghborhoods for your lifestyle.</p>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette featurette2">
+      <div class="col-sm-10 col-md-7 col-md-push-5">
+        <h2 class="featurette-heading">Learn Local Culture.<span class="text-muted"> Find Your Place.</span></h2>
+        <p class="lead">Experience life in a neighborhood by viewing a live Instagram feed and exploring local spots with an interactive map</p>
+      </div>
+    </div>
+<!-- 
+    <hr class="featurette-divider">
+ -->
+    <div class="row featurette featurette3">
+      <div class="col-sm-10 col-md-7">
+        <h2 class="featurette-heading">Neighborhood Data.<span class="text-muted"> At Your Fingertips.</span></h2>
+        <p class="lead">Access neighborhood specific rent and purchase prices, local commute times, detailed services and attractions in the area, and extensive demographic information.</p>
+      </div>
+    </div>
+ </div>
 </div>
+
