--- a/client/app/searchForm/searchFormTemplate.html
+++ b/client/app/searchForm/searchFormTemplate.html
@@ -1,5 +1,5 @@
 <div class="searchForm">
-  <form name="landingSearchForm" ng-submit="main.submitAddress()">
+  <form name="landingSearchForm">
     <div class="form-group">
       <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address" required>
     </div>
@@ -34,7 +34,7 @@
           </select>
         </div>
         <div class="col-sm-10 col-md-2">
-           <button type="button" class="btn btn=default landing-btn landing-submit" ng-class="{'disabled': main.searchInfo.address.length < 5,'btn-disabled': main.searchInfo.address.length < 5}">Submit</button>
+           <button type="button" class="btn btn=default landing-btn landing-submit" ng-click="main.submitAddress()">Submit</button>
         </div>
       </div>
     </div>
