--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -16,7 +16,7 @@
   <div class="searchForm col-sm-12 col-md-12" id="howItWorks">
     <form class="landingSearchForm col-md-8 col-md-offset-2">
       <div class="col-sm-4 col-md-6 landing-form">
-        <input class="form-control" type="search" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
+        <input class="form-control" type="search" autofocus="autofocus" ng-model="main.searchInfo.address" id='place-search' placeholder="Enter an Address">
       </div>
         <div class="col-sm-4 col-md-1 landing-form">
           <select class="form-control" id="rentBuy" name="rentBuy" ng-model="main.searchInfo.buyOrRent">
