--- a/client/app/services/servicesTemplate.html
+++ b/client/app/services/servicesTemplate.html
@@ -3,7 +3,7 @@
   <ul ng-repeat="service in details.currentNeighborhood.services">
     <li ng-click="details.displayMarkers(service); details.serviceSelectCategory($index)" ng-class="{activeServiceCategory: $index === details.selectedServiceCategory}">
       <!-- <img class="icon" src="{{service[0].icon}}" alt="service category icon"> -->
-      <span>{{service[0].type}}</span>
+      <span>{{service[0].displayName}}</span>
     </li>
   </ul>
 </div>
