[Fix] Fixes undefined tooltips on neighborhood markers."

--- a/client/app/details/detailsTemplate.html
+++ b/client/app/details/detailsTemplate.html
@@ -3,7 +3,7 @@
   <div class="slideshow" >
    <!-- neighborhood header -->
     <span class="profile-buttons neighborhood-name">{{main.currentNeighborhood.name}}</span>
-    <span class="profile-buttons back-button"><a ui-sref="main.results"> Back&#60;</a></span>
+    <span class="profile-buttons back-button"><a style="color:#fff" ui-sref="main.results"> Back&#60;</a></span>
     <slick dots=false infinite=true speed=300 autoplaySpeed=3000 pauseOnHover=true swipe=true variableWidth=true slides-to-show=4 autoplay=true touch-move=true slides-to-scroll=4 arrows=true>
       <!-- <div ng-if="details.picturesArr.length === 0" class="instagram-default-background">&nbsp; -->
         <div ng-repeat="pic in main.picturesArr">
