--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -47,7 +47,7 @@
           </select>
         </div>
         <div class="col-sm-2 col-md-1 landing-form">
-          <button type="button" class="landing-btn landing-submit">Submit</button>
+          <button type="button" ng-click="main.submitAddress()" class="landing-btn landing-submit">Submit</button>
         </div>
       </div>
     </form>
