[Fix] Fixes landing page to results page transition error.

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
   <body ng-controller="MainController as main" id="Turf">
 
   <div class="header">
-    <img src="assets/images/turf-logo-small.png">
+    <img ng-click="main.gotoLanding()" src="assets/images/turf-logo-small.png">
   </div>
 
   <div class="ui-view"></div>
